# wandb

./: .bumpversion.cargo.cfg  .bumpversion.cfg  .bumpversion.client.cfg  .bumpversion.core.cfg  .bumpversion.go.cfg  .bumpversion.nexus.cfg  .bumpversion.wandb.cfg  .clang-format  .codecov.yml  .coveragerc  .coveralls.yml  .dockerignore  .editorconfig  .flake8-base  .flake8-darglint  .flake8-docstrings  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .goreleaser.yaml  .libcst.codemod.yaml  .pre-commit-config.yaml  .pylintrc  .sweeps_ref  .test_durations  .travis.yml  .wandb.sample  .yea_durations  .yearc  APACHE.txt  ARCHITECTURE.md  AUTHORS.rst  BREAKING.md  CHANGELOG.md  CHANGELOG.unreleased.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPMENT.md  (+102 more)
client/: .gitignore  .rustfmt.toml  Cargo.toml  build.rs  go.mod  go.sum  hatch.py  pyproject.toml
client/cmd/client/: main.go
client/internal/connection/: connection.go
client/internal/execbin/: execbin.go  forkexec_notlinux.go
client/internal/launcher/: execbin.go  launcher.go
client/lang/js/: .gitattributes  .gitignore  Cargo.toml  index.d.ts  index.js  package.json
client/lang/py/: Cargo.toml  build.rs  pyproject.toml
client/pkg/client/: connection.go  run.go  session.go
client/pkg/run/: run.go
client/pkg/session/: session.go
client/src/: binder.rs  connection.rs  launcher.rs  lib.rs  printer.rs  run.rs  session.rs  settings.rs  wandb.rs  wandb_internal.rs
client/wandb/: __init__.py
core/: .gitignore  .golangci.yaml  .golangci.yml  MANIFEST.in  README.md  core.go  generate.go  go.mod  go.mod.1.22  go.sum  hatch.py  hatch_leet.py  pyproject.toml  setup.py  tools.go  winibuild.py
core/api/graphql/: generate-graphql.sh  generate.go  genqlient.yaml  mutation_alert.graphql  mutation_commit_artifact.graphql  mutation_complete_multipart_upload_artifact.graphql  mutation_create_artifact.graphql  mutation_create_artifact_files.graphql  mutation_create_artifact_manifest.graphql  mutation_create_run_files.graphql  mutation_link_artifact.graphql  mutation_mark_run_files_uploaded.graphql  mutation_refresh_multipart_upload_urls.graphql  mutation_rewind_run.graphql  mutation_run.graphql  mutation_stop_run.graphql  mutation_update_artifact.graphql  mutation_update_artifact_manifest.graphql  mutation_use_artifact.graphql  query_artifact_digest_algorithm.graphql  query_artifact_file_urls.graphql  query_artifact_files_by_manifest_entries.graphql  query_artifact_manifest.graphql  query_client_id_mapping.graphql  query_feature_flags.graphql  query_input_fields.graphql  query_nfs_artifact_collections.graphql  query_nfs_artifact_files.graphql  query_nfs_artifact_metadata.graphql  query_nfs_artifact_types.graphql  query_nfs_artifacts.graphql  query_nfs_run_files.graphql  query_nfs_runs.graphql  query_nfs_sweeps.graphql  query_org_entity_from_entity.graphql  query_organization_coreweave_organization_id.graphql  query_parquethistory.graphql  query_probe_type_input_fields.graphql  query_project_runs.graphql  query_run.graphql  (+11 more)
core/api/proto/: generate-proto.sh  generate.go  install-protoc.sh
core/cmd/benchmark/: main.go
core/cmd/eiofs/: main.go
core/cmd/generate_gql/: main.go
core/cmd/moni/: main.go
core/cmd/nvidia-gpu-stats/: main.go
core/cmd/observer/: main.go
core/cmd/peek/: main.go
core/cmd/wandb-core/: main.go
core/cmd/wandb-leet/: main.go
core/cmd/wandb_core/: main.go
core/docs/: contributing.md
core/internal/analytics/: opentelemetry_proxy.go  opentelemetry_proxy_test.go  opentelemetryproxy.go  opentelemetryproxy_test.go
core/internal/analyticstest/: opentelemetryproxy.go
core/internal/api/: api.go  api_test.go  apitesting.go  backenderrors.go  backenderrors_test.go  bufferingreader.go  bufferingreader_test.go  credentials.go  credentials_test.go  gql_client.go  httpwrapper.go  logging.go  networkpeeker.go  ratelimit.go  ratelimitheaders.go  ratelimitheaders_test.go  ratelimittracker.go  ratelimittracker_test.go  ratelimitwrapper.go  send.go  send_test.go  standardclient.go  transport.go  transport_inform.go  transportpeeker.go
core/internal/apihandler/: apihandler.go
core/internal/apitest/: apitest.go  fakeclient.go  recordingserver.go
core/internal/artifacts/: builder.go  builder_test.go  diegest_test.go  digest.go  downloader.go  linker.go  manifest.go  saver.go
core/internal/auth/: credentials.go  credentials_test.go  netrc.go  netrc_test.go
core/internal/clients/: backoff.go  backoff_test.go  clients.go  clients_test.go  proxy.go  proxy_test.go  retry_backoff.go  retry_policy.go  retry_policy_test.go
core/internal/clienttest/: clienttest.go  (+1 more)
core/lang/: .gitignore
core/pkg/: stream.go
core/scripts/: code-checks.sh  generate-graphql.sh  generate-proto.sh  install-golangci-lint.sh  run-core.sh  run-nexus.sh  setup-nexus-path.sh  update-dev-env.sh  update-dev-env.txt
core/wandb_core/: __init__.py
core/wandb_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
experiment/client-rust/: Cargo.toml
experimental/arrow-rs-wrapper/: Cargo.toml  hatch.py
experimental/client-rust/: Cargo.toml  build.rs  pyproject.toml
experimental/rust-sdk/: .gitignore  Cargo.toml  README.md  build.rs
gpu_stats/: Cargo.toml  build.rs  hatch.py
gpu_stats/src/: gpu_amd.rs  gpu_apple.rs  gpu_apple_sources.rs  gpu_nvidia.rs  gpu_nvidia_dcgm.rs  main.rs  metrics.rs  monitors.rs  pid.rs  system.rs  tpu.rs  tpu_libtpu.rs  wandb_internal.rs
gpu_stats/tools/: build_proto.rs  generate-proto.sh
leet-rs/: Cargo.toml
leet-rs/examples/: bench_nav.rs  dump.rs  render.rs  render_workspace.rs  toggle_repro.rs
leet-rs/src/: animation.rs  app.rs  config.rs  consolelogs.rs  filter.rs  flexlayout.rs  focusmanager.rs  grid.rs  help.rs  keybindings.rs  lib.rs  main.rs  metricsgrid.rs  msg.rs  nav.rs  pagedlist.rs  rightsidebar.rs  run.rs  runoverview.rs  sidebar.rs  systemgrid.rs  systemmetrics.rs  termbg.rs  textwrap.rs  theme.rs  units.rs
nvidia_gpu_stats/: Cargo.toml  go.mod  go.sum  hatch.py
nvidia_gpu_stats/src/: gpu_nvidia.rs  main.rs  metrics.rs
(+8506 files in other folders)
