[package]
name = "wandbinder"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
# crate-type = ["cdylib"]
# crate-type = ["lib"]

[[bin]]
name = "binder"
path = "src/binder.rs"

[dependencies]
bytes = "1.0.1"
byteorder = "1.5.0"
prost = "0.12.0"
prost-types = "0.12.0"
rand = "0.8.5"
pyo3 = { version = "0.20.0", features = ["abi3-py37", "extension-module"] }
tempfile = "3.8.0"
prost-build = "0.12.0"
uuid = "1.4.1"
fork = "0.1.22"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
sentry = "0.31.7"
colored = "2.0.4"
indicatif = "0.17.7"
chrono = "0.4.31"
rustfmt-nightly = "1.4.21"

[build-dependencies]
prost-build = "0.12.0"
tempfile = "3.8.0"
