[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wandb-core"
description = "W&B Core Library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = { text = "MIT License" }

dynamic = ["version"]

[tool.setuptools]
packages = ["wandb_core"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "wandb_core.__version__" }
