[package]
name = "wandb-leet"
version = "0.1.0"
edition = "2024"
description = "LEET — a terminal UI for W&B runs (Rust port)"
license = "MIT"

[[bin]]
name = "leet"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.2"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
crc32fast = "1"
unicode-width = "0.2"
base64 = "0.22"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif"] }

[profile.release]
lto = true
