[package]
name = "nvidia_gpu_stats"
version = "0.1.1"
edition = "2021"

[dependencies]
nvml-wrapper = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
nix = { version = "0.29", features = ["process"] }
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.31"
sentry = { version = "0.34", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
] }
