[package]
name = "wandb_core"
version = "0.17.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

# [[bin]]
# name = "binder"
# path = "src/binder.rs"

[dependencies]
bytes = "1.5.0"
byteorder = "1.5.0"
prost = "0.12.3"
prost-types = "0.12.3"
rand = "0.8.5"
pyo3 = { version = "0.20.3", features = ["abi3-py37", "extension-module"] }
tempfile = "3.10.1"
prost-build = "0.12.3"
uuid = "1.7.0"
fork = "0.1.23"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sentry = "0.32.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"
indicatif = "0.17.8"
chrono = "0.4.34"
numpy = "0.20.0"
image = "0.24.9"
sha2 = "0.10.8"

[build-dependencies]
pyo3-build-config = "0.20.3"
prost-build = "0.12.3"
tempfile = "3.10.1"
