[package]
name = "arrow-rs-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet = "53.3.0"
arrow = { version = "53.3.0", features = ["ffi", "ipc"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["blocking"] }
bytes = "1.0"

[dev-dependencies]
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "rlib"]  # rlib needed for integration tests
