[package]
name = "wandb-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py37", "extension-module"] }
delegate = "0.10.0"
pythonize = "0.20.0"
wandbinder = { path = "../../", default-features = false, features = ["py"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numpy = "0.20.0"
image = "0.24.7"
sha2 = "0.10.8"


[build-dependencies]
pyo3-build-config = "0.20.0"
